Homepage/index-style.css
body {
    background-color:#333131;
    font-family:'Montserrat', sans-serif;
    margin:0;
    padding:0;
}
.header {
    display:flex;
    width: 100%;
    height: 50px;
    background-color:rgba(22, 21, 21, 0.849);
    border-bottom:1px solid#9851EC;
}

.simple-calendar-homepage{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.title{
    display:inline-block;
    color:lightgray;
    justify-content:space-between;
    align-items:center;
    position:relative;
    top:-7px;
}

.calendar.main{
    display: flex;
    margin-top: 20px;
}

.timebox {
    width: 500px;
    height:40px;
    border: 1px solid #9851EC;
    background-color:lightgray;
    margin:0px;
    padding:10px;
}
.firstHalf{
    margin-right: 0px;
}
.secondHalf{
    margin-left: 0px;
}
.text{
    text-align:center;
}

.button{
    display:flex;
    border: 1px solid #9851EC;
    background-color:lightgray;
    padding:10px;
    margin:25px;
    font-family:'Cutive Mono', monospace;
    color:black;
    cursor:pointer;
    transition: all 0.3s ease 0s;
    border-radius:10px;
}

.button:hover {
    background-color:rgb(211, 211, 211, 0.8)
}

.button2 {
    display:flex;
    justify-content:center;
    align-items:center;
    background-color:#9851EC;
    font-weight: bolder;
    font-size: large;
    color:azure;
    width: 300px;
    height:75px;
}

/*AddEvent*/

.popup.addEvent {
    display: none;
    background-color: rgb(128, 120, 120);
    border-style: solid;
    border-color: black;
    width:800px;
    height:600px;
    position: relative;
    top:-300px;
    flex-direction: column;
}

.userInput {
    border: 2px;
    border-color:#9851EC;
    margin-top: 0px;
    padding:10px;
}
.eventTime{
    padding-left: 0px;
    display: flex;
}
.text{
    
    color:lightgray;
    margin-left:4.5rem;
}

.form.addEvent {
    display: flex;
    flex-direction: column;
    height:100%;
    gap:30px;
}
#eventName {
    width: 75%;
    margin-left: var(--margin_standard);
}

#startTime {
    margin-left: var(--margin_standard);
    margin-right:var(--margin_standard);
}

/*Sidebar*/

.sidebar{
    position: fixed;
    top: 0;
    left: 0;
    width: 4rem;
    height: 100vh;
    background-color:rgb(39, 39, 39);
    overflow: hidden;
    white-space: nowrap;
    box-shadow: 0px 0px 3px #d4d4d4;
    transition: 0.2s ease;
    border: 1px solid;
    border-right-color:#9851EC;
    border-bottom-color:#9851EC;
    justify-content:bottom;
    margin-top:51px;
}
.sidebar:hover{
    width:12rem;
}
.sidebar .sidebar-item{
    padding: 10px;
    color:lightgray;
}
.sidebar .sidebar-item:hover{
    background-color:#9851EC;
    cursor: pointer;
}

.sidebar .sidebar-item .fa{
    font-size: 25px;
    width: 40px;
    padding: 10px;
    color:lightgray;
}
.image {
    display:inline-block;
    padding-left:14px;
    position:relative;
    top:-15px;
}

